kube/services/revproxy/revproxy-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: revproxy-deployment
  annotations:
    gen3.io/network-ingress: "portal"
spec:
  selector:
    # Only select pods based on the 'app' label
    matchLabels:
      app: revproxy
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: revproxy
        # allow access from workspaces
        userhelper: "yes"
        GEN3_DATE_LABEL
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - revproxy
              topologyKey: "kubernetes.io/hostname"
      automountServiceAccountToken: false
      volumes:
        - name: revproxy-conf
          configMap:
            name: revproxy-nginx-conf
        - name: revproxy-subconf
          configMap:
            name: revproxy-nginx-subconf
        - name: modsec-conf
          configMap:
            name: manifest-modsec
        - name: helper-js
          configMap:
            name: revproxy-helper-js
        - name: cert-external-volume
          secret:
            secretName: "cert-external"
        - name: cert-volume
          secret:
            secretName: "cert-revproxy-service"
        - name: ca-volume
          secret:
            secretName: "service-ca"
      containers:
      - name: revproxy
        GEN3_REVPROXY_IMAGE|-image: nginx:1.13.9-perl-|
        command:
          - /usr/sbin/nginx
          - -g
          - 'daemon off;'
        livenessProbe:
          httpGet:
            path: /_status
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /_status
            port: 80
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
          - name: "revproxy-conf"
            readOnly: true
            mountPath: "/etc/nginx/nginx.conf"
            subPath: nginx.conf
          - name: "revproxy-subconf"
            readOnly: true
            mountPath: "/etc/nginx/gen3.conf"
          - name: "modsec-conf"
            readOnly: true
            mountPath: "/etc/nginx/modsec"
          - name: "helper-js"
            readOnly: true
            mountPath: "/etc/nginx/helpers.js"
            subPath: helpers.js
          - name: "cert-volume"
            readOnly: true
            # revproxy-service domain certificate
            mountPath: "/mnt/ssl/service.crt"
            subPath: "service.crt"
          - name: "cert-volume"
            readOnly: true
            mountPath: "/mnt/ssl/service.key"
            subPath: "service.key"
          - name: "cert-external-volume"
            readOnly: true
            # external hostname certificate
            mountPath: "/mnt/ssl/external.crt"
            subPath: "service.crt"
          - name: "cert-external-volume"
            readOnly: true
            mountPath: "/mnt/ssl/external.key"
            subPath: "service.key"
          - name: "ca-volume"
            # See https://askubuntu.com/questions/645818/how-to-install-certificates-for-command-line
            readOnly: true
            mountPath: "/usr/local/share/ca-certificates/cdis/cdis-ca.crt"
            subPath: "ca.pem"
        resources:
          requests:
            cpu: 0.5
            memory: 1024Mi
          limits:
            cpu: 1.0
            memory: 2048Mi    
        command: ["/bin/sh" ]
        args:
          - "-c"
          # Script always succeeds if it runs (echo exits with 0)
          # Launch script handles different nginx versions, etc
          - |
            for name in ngx_http_perl_module.so ngx_http_js_module.so ngx_http_headers_more_filter_module.so ngx_http_modsecurity_module.so; do
              if [ -f /etc/nginx/modules/$name ]; then
                echo "load_module modules/$name;" >> /etc/nginx/gen3_modules.conf
              fi
            done
            if [ -f /etc/nginx/modules/ngx_http_modsecurity_module.so -a -f /etc/nginx/modsec/main.conf ]; then
              echo "modsecurity on;" >> /etc/nginx/gen3_server_modsec.conf
              echo "modsecurity_rules_file /etc/nginx/modsec/main.conf;" >> /etc/nginx/gen3_server_modsec.conf
            fi
            exec nginx -g 'daemon off;'
