kube/services/revproxy/revproxy-service-alb.yaml
apiVersion: v1
kind: Service
metadata:
  name: "revproxy-service-alb"
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
  type: LoadBalancer
  selector:
    app: "revproxy"
