kube/services/revproxy/revproxy-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: revproxy-service
spec:
  selector:
    app: revproxy
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: NodePort
